# Warhammer_40k_UI_arcade

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  OriginalResearch.md  OverallPlan.md  README.md  architecture.md  pyproject.toml  ui_and_core_features_summary.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
art/: preview.html
docs/: README.md  hud-customization.md  ui-configuration.md
docs/adr/: 0001-ui-core-boundary.md  0002-ci-quality-gates.md
docs/diagnostics/: event-trace-cfg.json
docs/guidance/: ASSET_MGMT_AND_ADDRESSING.md  ICON_GRAPHICS_SYSTEM.md  UI_HUD_DESIGN.md
docs/hud/: command-bench-hud.yaml  default-hud.yaml
docs/plans/: README.md  phase-00-repository-bootstrap.md  phase-01-documentation-foundation.md  phase-02-core-client-adapter.md  phase-03-arcade-rendering-foundation.md  phase-04-selection-unit-hud.md  phase-04-shareable-ui-preferences.md  phase-05-finite-decision-submission.md  phase-05-selection-unit-hud.md  phase-06-finite-decision-submission.md  phase-06-movement-path-drafting.md  phase-07-movement-path-drafting.md  phase-07-movement-proposal-diagnostics.md  phase-08-entity-selection-profile-foundation.md  phase-08-hud-ergonomics.md  phase-08-movement-proposal-diagnostics.md  phase-09-hud-ergonomics.md  (+64 more)
scripts/: check_import_boundaries.py
tests/: conftest.py  test_action_summary.py  test_assignment_workspace.py  test_config.py  test_core_client_local_session.py  test_core_client_protocol.py  test_core_phase15_adapter_regression.py  test_core_projection.py  test_crash_report.py  test_debug_fixtures.py  test_dice_tray.py  test_entity_selection_state.py  test_entrypoint.py  test_finite_decision_state.py  test_forensic_trace.py  test_gui_event_driver.py  test_headless_render_capture.py  test_hud_ergonomics.py  test_hud_layouts.py  test_hud_selection.py  test_hud_widget_toolkit.py  test_import_boundaries.py  test_legacy_ui_cleanup.py  test_live_core_smoke.py  test_movement_draft.py  test_movement_submission.py  test_packaging_metadata.py  test_phase21_regression_fixtures.py  test_placement_draft.py  test_placement_submission.py  test_preferences.py  test_render_camera.py  test_render_primitives.py  test_selection_state.py
(+96 files in other folders)
