[project]
name = "warhammer40k-arcade-ui"
version = "0.1.0"
description = "Arcade-based UI client for SobolGaming Warhammer_40k_AI"
readme = "README.md"
requires-python = ">=3.14.5,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "SobolGaming" }]
dependencies = [
    "arcade>=3.3",
    "orjson>=3.10",
    "platformdirs>=4.3",
    "pydantic>=2.11",
    "PyYAML>=6.0",
    "typing-extensions>=4.14",
    "warhammer40k-core-v2",
]

[project.scripts]
warhammer40k-arcade-ui = "warhammer40k_arcade_ui.main:main"
warhammer40k-export-preferences = "warhammer40k_arcade_ui.preferences.export_profile:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warhammer40k_arcade_ui"]

[tool.uv]
package = true

[tool.uv.sources]
warhammer40k-core-v2 = { path = "../Warhammer_40k_AI", editable = true }

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "UP", "SIM", "C4", "DTZ", "PIE", "PT", "RET", "RUF", "TRY", "PTH",
]
ignore = [
  "TRY003", # Long domain/UI diagnostic messages are acceptable.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = ["src", "../Warhammer_40k_AI/src"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src", "tests"]
extraPaths = ["../Warhammer_40k_AI/src"]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "smoke: bootstrap smoke tests",
]

[tool.coverage.run]
branch = true
source = ["warhammer40k_arcade_ui"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "coverage[toml]>=7.9",
    "mypy>=1.16",
    "pre-commit>=4.2",
    "pyright>=1.1",
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "types-PyYAML>=6.0",
]
